<resources>
    <string name="app_name">Pat Says</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="start_game">Start Game</string>
    <string name="create_game">create game</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="invitations">Invitations</string>
    <string name="game_lobby">Game Lobby</string>
    <string name="players">players:</string>
    <string name="invite_players">Invite Players</string>
    <string name="continue_button">continue</string>
    <string name="username">Username</string>
    <string name="social">social</string>
    <string name="choose_cards">Choose Cards</string>
    <string name="friend_requests">Friend Requests:</string>
    <string name="friends">Friends</string>
    <string name="open_user_search">open user search</string>
    <string name="invite">invite</string>
    <string name="remove">Remove</string>
    <string name="add_friend">Add Friend</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place">Place</string>
</resources>