<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LobbyActivity">

    <TextView
        android:id="@+id/lobby_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/game_lobby"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="15dp"/>

    <TextView
        android:id="@+id/players_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lobby_title"
        android:text="@string/players"
        android:layout_margin="15dp"/>

    <TextView
        android:id="@+id/player_list"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/players_title"/>

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <Button
            android:id="@+id/invite_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invite_players"/>
        <Button
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_game"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>